Project

General

Profile

Actions

Bug #10576

closed

[DOC] Several fixes for the BigDecimal documentation

Bug #10576: [DOC] Several fixes for the BigDecimal documentation

Added by stomar (Marcus Stollsteimer) almost 12 years ago. Updated over 11 years ago.

Status:
Closed
Assignee:
Target version:
ruby -v:
ruby 2.1.5p273 (2014-11-13 revision 48405) [i686-linux]
[ruby-core:66730]

Description

Patch 1:

Clarify the return value types of abs, fix, and frac.

(They return the results as a BigDecimal; targeted against misunderstandings like issue #10569).

Patch 2:

Several fixes for the BigDecimal documentation:

  • fix broken labeled lists,
  • fix formatting of code examples,
  • fix/improve some call-seq's,
  • small improvements.

Files

doc_bigdecimal_p1.patch (760 Bytes) doc_bigdecimal_p1.patch patch 1 stomar (Marcus Stollsteimer), 12/06/2014 01:52 PM
doc_bigdecimal_p2.patch (6.22 KB) doc_bigdecimal_p2.patch patch 2 (apply after patch 1) stomar (Marcus Stollsteimer), 12/06/2014 01:52 PM
doc_bigdecimal_p3.patch (1.02 KB) doc_bigdecimal_p3.patch patch 3 stomar (Marcus Stollsteimer), 12/06/2014 07:14 PM
Actions

Also available in: PDF Atom